--- a/views/base.html
+++ b/views/base.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,13 +8,192 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>{{title}}</title>
+    <title>¡Welcome to Jobs!</title>
+
+      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+      <link rel="stylesheet" href="//cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
+      <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 
   </head>
 
   <body>
 
-        {{!base}}
+  <div class="navbar navbar-expand-lg navbar-dark bg-dark" role="navigation">
+      <a class="navbar-brand" href="#">Jobs!</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse">
+          <ul class="navbar-nav mr-auto">
+              <li class="nav-item"><a class="nav-link" href="/static/home.html">Home</a></li>
+              <li class="nav-item"><a class="nav-link" href="/static/about.html">About</a></li>
+              <li class="nav-item"><a class="nav-link" href="/static/assignment.html">Assignment Spec</a></li>
+          </ul>
+      </div>
+            <form id='loginform' class="form-inline" role="login" method='post' action='/login'>
+            <div class="form-group">
+              <input type="text" name='nick' class="form-control" placeholder="Username">
+            </div>
+            <div class="form-group">
+              <input type="password" name='password' class="form-control" placeholder="Password">
+            </div>
+            <input type="submit" class="btn btn-default" value='Login' >
+        </form>
+    </div>
+
+    <div class="container">
+
+        <div class="header">
+            <h1>¡Welcome to Jobs!</h1>
+        </div>
+        
+
+    <div class="row">
+
+
+        <div class="card" style="width: 18rem;">
+            <div class="card-header">
+                <h5 class="card-title">sample</h5>
+                <div class="company">sample</div>
+            </div>
+            <div class="card-body">
+                <h6 class="card-subtitle mb-2 text-muted">
+                    <span class="user">@Contrary:</span>
+                    <span class="timestamp">2018-05-23 11:05:29</span>
+                </h6>
+                <p class="card-text"> sample</p>
+                <a class="card-link" href="/positions/173">Read More</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <div class="card-header">
+                <h5 class="card-title">automated2</h5>
+                <div class="company">automated2</div>
+            </div>
+            <div class="card-body">
+                <h6 class="card-subtitle mb-2 text-muted">
+                    <span class="user">@crackme:</span>
+                    <span class="timestamp">2018-05-23 10:56:38</span>
+                </h6>
+                <p class="card-text"> automated2</p>
+                <a class="card-link" href="/positions/172">Read More</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <div class="card-header">
+                <h5 class="card-title">automated</h5>
+                <div class="company">automated</div>
+            </div>
+            <div class="card-body">
+                <h6 class="card-subtitle mb-2 text-muted">
+                    <span class="user">@Bobalooba:</span>
+                    <span class="timestamp">2018-05-23 10:54:42</span>
+                </h6>
+                <p class="card-text"> automated</p>
+                <a class="card-link" href="/positions/171">Read More</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <div class="card-header">
+                <h5 class="card-title">t1</h5>
+                <div class="company">c1</div>
+            </div>
+            <div class="card-body">
+                <h6 class="card-subtitle mb-2 text-muted">
+                    <span class="user">@Bobalooba:</span>
+                    <span class="timestamp">2018-05-23 10:44:49</span>
+                </h6>
+                <p class="card-text"> d1</p>
+                <a class="card-link" href="/positions/170">Read More</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <div class="card-header">
+                <h5 class="card-title">TestTitle</h5>
+                <div class="company">TestCompany</div>
+            </div>
+            <div class="card-body">
+                <h6 class="card-subtitle mb-2 text-muted">
+                    <span class="user">@Bobalooba:</span>
+                    <span class="timestamp">2018-05-23 10:27:29</span>
+                </h6>
+                <p class="card-text"> TestDescription</p>
+                <a class="card-link" href="/positions/169">Read More</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <div class="card-header">
+                <h5 class="card-title">uigb9.</h5>
+                <div class="company">uygu8</div>
+            </div>
+            <div class="card-body">
+                <h6 class="card-subtitle mb-2 text-muted">
+                    <span class="user">@crackme:</span>
+                    <span class="timestamp">2018-05-23 07:37:01</span>
+                </h6>
+                <p class="card-text"> 0hy08908</p>
+                <a class="card-link" href="/positions/168">Read More</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <div class="card-header">
+                <h5 class="card-title"> gfvhg</h5>
+                <div class="company"></div>
+            </div>
+            <div class="card-body">
+                <h6 class="card-subtitle mb-2 text-muted">
+                    <span class="user">@crackme:</span>
+                    <span class="timestamp">2018-05-23 07:36:50</span>
+                </h6>
+                <p class="card-text"> </p>
+                <a class="card-link" href="/positions/167">Read More</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <div class="card-header">
+                <h5 class="card-title">hi</h5>
+                <div class="company">maq</div>
+            </div>
+            <div class="card-body">
+                <h6 class="card-subtitle mb-2 text-muted">
+                    <span class="user">@crackme:</span>
+                    <span class="timestamp">2018-05-23 07:01:03</span>
+                </h6>
+                <p class="card-text"> gdsnfjsfsd</p>
+                <a class="card-link" href="/positions/166">Read More</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <div class="card-header">
+                <h5 class="card-title">Week 11</h5>
+                <div class="company">COMP249</div>
+            </div>
+            <div class="card-body">
+                <h6 class="card-subtitle mb-2 text-muted">
+                    <span class="user">@crackme:</span>
+                    <span class="timestamp">2018-05-23 06:54:22</span>
+                </h6>
+                <p class="card-text"> <p>I finished the Week 11 Workshop Task!</p></p>
+                <a class="card-link" href="/positions/165">Read More</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <div class="card-header">
+                <h5 class="card-title">crackme</h5>
+                <div class="company">mq uni</div>
+            </div>
+            <div class="card-body">
+                <h6 class="card-subtitle mb-2 text-muted">
+                    <span class="user">@Bobalooba:</span>
+                    <span class="timestamp">2018-05-23 06:49:30</span>
+                </h6>
+                <p class="card-text"> sjhjkdvbsvs</p>
+                <a class="card-link" href="/positions/164">Read More</a>
+            </div>
+        </div>
+        </div>
+
 
     </div>
 
