Level 2 Unit and Functional

--- a/views/base.html
+++ b/views/base.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Assignment 2">
+    <meta name="author" content="Amith Raj & Steve Cassidy">
 
     <title>¡Welcome to Jobs!</title>
 
@@ -49,151 +49,9 @@
         </div>
         
 
-    <div class="row">
-
-
-        <div class="card" style="width: 18rem;">
-            <div class="card-header">
-                <h5 class="card-title">sample</h5>
-                <div class="company">sample</div>
-            </div>
-            <div class="card-body">
-                <h6 class="card-subtitle mb-2 text-muted">
-                    <span class="user">@Contrary:</span>
-                    <span class="timestamp">2018-05-23 11:05:29</span>
-                </h6>
-                <p class="card-text"> sample</p>
-                <a class="card-link" href="/positions/173">Read More</a>
-            </div>
+        <div class="jobposts">
+            {{!base}}
         </div>
-        <div class="card" style="width: 18rem;">
-            <div class="card-header">
-                <h5 class="card-title">automated2</h5>
-                <div class="company">automated2</div>
-            </div>
-            <div class="card-body">
-                <h6 class="card-subtitle mb-2 text-muted">
-                    <span class="user">@crackme:</span>
-                    <span class="timestamp">2018-05-23 10:56:38</span>
-                </h6>
-                <p class="card-text"> automated2</p>
-                <a class="card-link" href="/positions/172">Read More</a>
-            </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <div class="card-header">
-                <h5 class="card-title">automated</h5>
-                <div class="company">automated</div>
-            </div>
-            <div class="card-body">
-                <h6 class="card-subtitle mb-2 text-muted">
-                    <span class="user">@Bobalooba:</span>
-                    <span class="timestamp">2018-05-23 10:54:42</span>
-                </h6>
-                <p class="card-text"> automated</p>
-                <a class="card-link" href="/positions/171">Read More</a>
-            </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <div class="card-header">
-                <h5 class="card-title">t1</h5>
-                <div class="company">c1</div>
-            </div>
-            <div class="card-body">
-                <h6 class="card-subtitle mb-2 text-muted">
-                    <span class="user">@Bobalooba:</span>
-                    <span class="timestamp">2018-05-23 10:44:49</span>
-                </h6>
-                <p class="card-text"> d1</p>
-                <a class="card-link" href="/positions/170">Read More</a>
-            </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <div class="card-header">
-                <h5 class="card-title">TestTitle</h5>
-                <div class="company">TestCompany</div>
-            </div>
-            <div class="card-body">
-                <h6 class="card-subtitle mb-2 text-muted">
-                    <span class="user">@Bobalooba:</span>
-                    <span class="timestamp">2018-05-23 10:27:29</span>
-                </h6>
-                <p class="card-text"> TestDescription</p>
-                <a class="card-link" href="/positions/169">Read More</a>
-            </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <div class="card-header">
-                <h5 class="card-title">uigb9.</h5>
-                <div class="company">uygu8</div>
-            </div>
-            <div class="card-body">
-                <h6 class="card-subtitle mb-2 text-muted">
-                    <span class="user">@crackme:</span>
-                    <span class="timestamp">2018-05-23 07:37:01</span>
-                </h6>
-                <p class="card-text"> 0hy08908</p>
-                <a class="card-link" href="/positions/168">Read More</a>
-            </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <div class="card-header">
-                <h5 class="card-title"> gfvhg</h5>
-                <div class="company"></div>
-            </div>
-            <div class="card-body">
-                <h6 class="card-subtitle mb-2 text-muted">
-                    <span class="user">@crackme:</span>
-                    <span class="timestamp">2018-05-23 07:36:50</span>
-                </h6>
-                <p class="card-text"> </p>
-                <a class="card-link" href="/positions/167">Read More</a>
-            </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <div class="card-header">
-                <h5 class="card-title">hi</h5>
-                <div class="company">maq</div>
-            </div>
-            <div class="card-body">
-                <h6 class="card-subtitle mb-2 text-muted">
-                    <span class="user">@crackme:</span>
-                    <span class="timestamp">2018-05-23 07:01:03</span>
-                </h6>
-                <p class="card-text"> gdsnfjsfsd</p>
-                <a class="card-link" href="/positions/166">Read More</a>
-            </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <div class="card-header">
-                <h5 class="card-title">Week 11</h5>
-                <div class="company">COMP249</div>
-            </div>
-            <div class="card-body">
-                <h6 class="card-subtitle mb-2 text-muted">
-                    <span class="user">@crackme:</span>
-                    <span class="timestamp">2018-05-23 06:54:22</span>
-                </h6>
-                <p class="card-text"> <p>I finished the Week 11 Workshop Task!</p></p>
-                <a class="card-link" href="/positions/165">Read More</a>
-            </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <div class="card-header">
-                <h5 class="card-title">crackme</h5>
-                <div class="company">mq uni</div>
-            </div>
-            <div class="card-body">
-                <h6 class="card-subtitle mb-2 text-muted">
-                    <span class="user">@Bobalooba:</span>
-                    <span class="timestamp">2018-05-23 06:49:30</span>
-                </h6>
-                <p class="card-text"> sjhjkdvbsvs</p>
-                <a class="card-link" href="/positions/164">Read More</a>
-            </div>
-        </div>
-        </div>
-
 
     </div>
 
